<resources>
    <string name="app_name" translatable="false">QA App</string>
    <string name="developers" translatable="false">EyeSeeTea LTD</string>
    <string name="empty_string" translatable="false"/>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="score">Score</string>
    <string name="number_zero" translatable="false">0</string>
    <string name="number_zero_percentage" translatable="false">0 % </string>
    <string name="title_id">ID</string>
    <string name="title_name">Name</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="poor">Poor</string>
    <string name="plus" translatable="false">+</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>
    <string name="send">Send</string>
    <string name="settings_menu_about">About</string>
    <string name="settings_menu_legal">Legal</string>
    <string name="settings_menu_copyright">Copyright</string>
    <string name="settings_menu_licenses">Software licenses</string>
    <string name="settings_menu_eula">EULA</string>
    <string name="settings_menu_configuration">Settings</string>
    <string name="settings_menu_licence">License</string>
    <string name="settings_menu_update">Update questions (DHIS)</string>
    <string name="settings_menu_logout">Logout</string>
    <string name="login_info_username">User</string>
    <string name="login_info_password">Password</string>
    <string name="login_info_sign_in">Sign in</string>
    <string name="login_error_bad_credentials">Your user/password are incorrect</string>
    <string name="login_info_dhis_default_server_url" translatable="false">https://malariacare.psi.org</string>
    <string name="go_to_feedback">Go to feedback</string>
    <string name="dialog_title_delete_survey">Delete Survey</string>
    <string name="dialog_info_delete_survey">Are you sure you want to completely delete the survey %s?</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_error_denominator">Error, denominator = 0</string>
    <string name="dialog_title_missing_selection">Missing selection</string>
    <string name="dialog_content_missing_selection">Please select Org Unit and Survey details</string>
    <string name="dialog_title_existing_survey">Existing Survey</string>
    <string name="dialog_content_existing_survey">There is already a not sent form in the system for that Org Unit/Survey</string>
    <string name="dialog_title_incorrect_org_unit">Incorrect Org Unit</string>
    <string name="dialog_content_incorrect_org_unit">Please select a final org unit</string>
    <string name="dialog_content_logout_confirmation">If you exit the system, all the not sent data will be deleted. Do you still want to exit?</string>
    <string name="dialog_title_send_preview">Send or Preview</string>
    <string name="dialog_content_send_preview">Do you want to send survey?</string>
    <string name="dialog_title_push_data">Pushing data</string>
    <string name="dialog_content_push_data">Are you sure that you want to send? You cannot undo this action</string>
    <string name="dialog_button_preview_feedback">View Feedback</string>
    <string name="dialog_question_complete_survey">All compulsory questions were completed. Would you like to mark this survey as completed?</string>
    <string name="dialog_continue_later_option">Continue Later</string>
    <string name="dialog_complete_option">Complete</string>
    <string name="dialog_are_you_sure_complete_survey">Are you sure? This action cannot be undone and you will no longer be able to edit or delete this survey</string>
    <string name="dialog_incompleted_compulsory_survey">This survey cannot be sent yet. Please answer at least all the compulsory questions</string>
    <string name="dialog_incompleted_compulsory_pulling">Metadata refresh require delete or complete your unsent data. Please answer at least all the compulsory questions</string>
    <string name="dialog_sent_survey_on_refresh_metadata">Metadata refresh will delete your unsent data. You have %s unsent surveys. Do you to push them before refresh?</string>
    <string name="cancellingPull">The process will be stopped in a few seconds </string>
    <string name="dashboard_info_feedback">Feedback</string>
    <string name="dashboard_info_active_assessments">Active Assessments</string>
    <string name="dashboard_info_new_assessment">New assessment</string>
    <string name="dashboard_info_future_assessments">Future Assessments</string>
    <string name="dashboard_info_performance">Performance Against Target</string>
    <string name="dashboard_info_analytics">Analytics</string>
    <string name="dashboard_button_new_survey">New Survey</string>
    <string name="dashboard_button_see_all">See all</string>
    <string name="dashboard_info_ready_to_upload">Ready to upload</string>
    <string name="dashboard_info_sent">Sent</string>
    <string name="dashboard_title_total_assessments">Total number of assessments undertaken</string>
    <string name="dashboard_title_table_facilities">Quality of care (last 6 months)</string>
    <string name="dashboard_title_planned_type_never">Never assessed</string>
    <string name="dashboard_title_planned_type_overdue">Overdue</string>
    <string name="dashboard_title_planned_type_next_30">Next 30 days</string>
    <string name="dashboard_title_planned_type_future">Future</string>
    <string name="dashboard_title_planned_productivity">Prd</string>
    <string name="dashboard_title_planned_quality_of_care">QoC</string>
    <string name="dashboard_title_planned_next_qa">Next QA</string>
    <string name="create_info_ok">Start</string>
    <string name="create_info_organization_unit">Organisation Unit</string>
    <string name="create_info_survey">Survey</string>
    <string name="create_info_tabs_group">Tab Group</string>
    <string name="create_info_zone">Zone</string>
    <string name="assessment_title_facility_date">Facility / Survey</string>
    <string name="assessment_title_state">% complete</string>
    <string name="assessment_sent_title_state">Status</string>
    <string name="assessment_sent_date">Completion date</string>
    <string name="assessment_sent_score">Score</string>
    <string name="assessment_info_delete">Delete</string>
    <string name="assessment_title_header">Active Assessment(s)</string>
    <string name="assessment_sent_title_header">Previous Assessment(s)</string>
    <string name="feedback_title_organization_unit_date">Org Unit / Date</string>
    <string name="feedback_title_header">Feedback</string>
    <string name="feedback_show_only_failed">Show only failed questions</string>
    <string name="feedback_return">Return to all assessments</string>
    <string name="quality_of_care">Quality of Care (QoC) Score:</string>
    <string name="feedback_info_passed">PASS</string>
    <string name="feedback_info_failed">FAIL</string>
    <string name="feedback_info_not_answered">NA</string>
    <string name="feedback_info_no_feedback">No feedback</string>
    <string name="feedback_info_conflict">Conflict</string>
    <string name="future_title_facility">Facility</string>
    <string name="future_title_previous_date">Date Prev. Assess.</string>
    <string name="future_title_due_date">Due date</string>
    <string name="future_title_action">Action</string>
    <string name="future_title_header">Future Assessments</string>
    <string name="performance_title_period">Period</string>
    <string name="performance_title_target">Target</string>
    <string name="performance_title_completed">Done</string>
    <string name="performance_title_achievement">Achievement</string>
    <string name="performance_title_header">Performance Against Target</string>
    <string name="analytics_title_period">Period</string>
    <string name="analytics_title_target">Target</string>
    <string name="analytics_title_completed">Done</string>
    <string name="analytics_title_achievement">Achievement</string>
    <string name="analytics_title_header">Analytics</string>
    <string name="survey_title_exit">"Really Exit?"</string>
    <string name="survey_info_exit">"Are you sure you want to exit?"</string>
    <string name="survey_info_select_tab">Select Tab: </string>
    <string name="widget_info_empty_statement">Question statement</string>
    <string name="custom_title_tallies">TALLIES - Add up and enter the totals for the following indicators from the registers in column A.  In column B enter the total numbers from the monthly reporting sheet</string>
    <string name="custom_info_tallies">TALLIES for the Month of</string>
    <string name="custom_info_one" translatable="false">1</string>
    <string name="custom_info_two" translatable="false">2</string>
    <string name="custom_info_three" translatable="false">3</string>
    <string name="custom_info_four" translatable="false">4</string>
    <string name="custom_info_five" translatable="false">5</string>
    <string name="custom_info_six" translatable="false">6</string>
    <string name="custom_info_seven" translatable="false">7</string>
    <string name="custom_info_eight" translatable="false">8</string>
    <string name="custom_info_nine" translatable="false">9</string>
    <string name="custom_info_ten" translatable="false">10</string>
    <string name="custom_info_eleven" translatable="false">11</string>
    <string name="custom_info_twelve" translatable="false">12</string>
    <string name="custom_info_thirteen" translatable="false">13</string>
    <string name="custom_info_fourteen" translatable="false">14</string>
    <string name="custom_info_fifteen" translatable="false">15</string>
    <string name="custom_info_sixteen" translatable="false">16</string>
    <string name="custom_info_seventeen" translatable="false">17</string>
    <string name="custom_info_eighteen" translatable="false">18</string>
    <string name="custom_info_nineteen" translatable="false">19</string>
    <string name="custom_info_twenty" translatable="false">20</string>
    <string name="adherence_info_switchquestion">Are there laboratory registers and pharmacy or clinical registers available at this facility?</string>
    <string name="adherence_title_explanation">Evaluation of Provider Adherence to Malaria Diagnostic Test Results</string>
    <string name="adherence_title_test_results">Test results</string>
    <string name="iqatab_info_supervisor">Supervisor</string>
    <string name="iqatab_info_parasites">Parasites/uL</string>
    <string name="iqatab_info_species">Species</string>
    <string name="iqatab_info_results">Results below are auto-calculated</string>
    <string name="iqatab_info_supervisor_matches">Supervisor matches lab staff?</string>
    <string name="compscore_title_score_percentage">Score (%)</string>
    <string name="normal_font" translatable="false">Roboto-Medium.ttf</string>
    <string name="medium_font_name" translatable="false">Roboto-Medium.ttf</string>
    <string name="condensed_font_name" translatable="false">Roboto-Condensed.ttf</string>
    <string name="font_size_level1" translatable="false">small</string>
    <string name="font_size_level2" translatable="false">medium</string>
    <string name="textcard_default_scale" translatable="false">system</string>
    <string name="textcard_default_dimension" translatable="false">medium</string>
    <string name="settings_menu_pull">Refresh metadata</string>
    <string name="planning_label_comment">* Comment</string>
    <string name="planning_label_schedule_date">* Scheduled Date</string>
    <string name="option_edit">Edit</string>
    <string name="option_mark_completed">Mark as completed</string>
    <string name="option_delete">Delete</string>
</resources>