<!--
  ~ Copyright (c) 2015.
  ~
  ~ This file is part of Facility QA Tool App.
  ~
  ~  Facility QA Tool App is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Facility QA Tool App is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/action_settings" android:title="@string/settings_menu_configuration"
      android:orderInCategory="100"/>
  <item android:id="@+id/action_license" android:title="@string/settings_menu_licence"
      android:orderInCategory="102"/>
  <item android:id="@+id/action_about" android:title="@string/settings_menu_about"
      android:orderInCategory="103"/>
  <item android:id="@+id/action_pull" android:title="@string/settings_menu_pull"
      android:orderInCategory="103"/>
  <item android:id="@+id/action_logout" android:title="@string/settings_menu_logout"
      android:orderInCategory="105"/>
</menu>
