<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.5"
        android:padding="@dimen/question_padding_all">
        <org.eyeseetea.malariacare.views.CustomTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_info_empty_statement"
            android:id="@+id/statement"
            android:paddingLeft="@dimen/question_padding_left"
            android:textColor="@color/black"
            app:tDimension="@string/font_size_level1"
            app:tFontName="@string/medium_font_name" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.5"
        android:padding="@dimen/question_padding_all">

        <org.eyeseetea.malariacare.views.CustomButtont
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/empty_string"
            android:id="@+id/answer"
            android:background="@drawable/background_textfield"
            android:fontFamily="@string/normal_font" />
    </RelativeLayout>

</LinearLayout>