<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

        <org.eyeseetea.malariacare.views.TextCard
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/iqatab_info_supervisor"
            android:id="@+id/supervisorTitle"
            android:textStyle="bold"
            android:paddingBottom="20dip"
            app:tDimension="@string/font_size_level2"
            app:tFontName="@string/condensed_font_name" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/supervisorHeader"
            android:layout_gravity="center"
            android:background="@drawable/background_odd">


                <org.eyeseetea.malariacare.views.TextCard
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/adherence_title_test_results"
                    android:id="@+id/supervisorResults"
                    android:background="@drawable/background_header"
                    android:textColor="#ffffff"
                    android:lines="2"
                    android:gravity="center"
                    android:padding="5dip"
                    android:layout_weight="0.4"
                    app:tDimension="@string/font_size_level2"
                    app:tFontName="@string/condensed_font_name" />

                <org.eyeseetea.malariacare.views.TextCard
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/iqatab_info_parasites"
                    android:id="@+id/supervisorParasites"
                    android:background="@drawable/background_header"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:lines="2"
                    android:padding="5dip"
                    android:layout_weight="0.3"
                    app:tDimension="@string/font_size_level2"
                    app:tFontName="@string/condensed_font_name" />

                <org.eyeseetea.malariacare.views.TextCard
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/iqatab_info_species"
                    android:id="@+id/supervisorSpecies"
                    android:background="@drawable/background_header"
                    android:textColor="#ffffff"
                    android:lines="2"
                    android:gravity="center"
                    android:padding="5dip"
                    android:layout_weight="0.3"
                    app:tDimension="@string/font_size_level2"
                    app:tFontName="@string/condensed_font_name" />
        </LinearLayout>
</LinearLayout>