<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015.
  ~
  ~ This file is part of QA App.
  ~
  ~  Health Network QIS App is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Health Network QIS App is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/option_edit" android:title="@string/option_edit"
        android:orderInCategory="100" android:background="@color/customBlue"/>
    <item android:id="@+id/option_mark_completed" android:title="@string/option_mark_completed"
        android:orderInCategory="101" android:background="@color/customBlue"/>
    <item android:id="@+id/option_delete" android:title="@string/option_delete"
        android:orderInCategory="102" android:background="@color/customBlue"/>
</menu>